@@ -52,13 +52,17 @@ struct HealthRecord {
   std::string endpoint;
   std::string lastAcked;
   std::string hostId;
+  std::string serverVersion;
+  std::string engine;
   size_t version;
 
   explicit HealthRecord() : version(0) {}
 
   HealthRecord(
-    std::string const& sn, std::string const& ep, std::string const& ho) :
-    shortName(sn), endpoint(ep), hostId(ho), version(0) {}
+    std::string const& sn, std::string const& ep, std::string const& ho,
+    std::string const& en, std::string const& sv) :
+    shortName(sn), endpoint(ep), hostId(ho), serverVersion(sv),
+    engine(en), version(0) {}
 
   HealthRecord(Node const& node) {
     *this = node;
@@ -87,6 +91,11 @@ struct HealthRecord {
         if (node.has("LastAcked")) {
           lastAcked = node.hasAsString("LastAcked").first;
         }
+        if (node.has("Engine") && node.has("Version")) {
+          version = 4;
+          engine = node.hasAsString("Engine").first;
+          serverVersion = node.hasAsString("Version").first;
+        }
       } else if (node.has("LastHeartbeatStatus")) {
         version = 1;
         syncStatus = node.hasAsString("LastHeartbeatStatus").first;
@@ -110,6 +119,8 @@ struct HealthRecord {
     status = other.status;
     endpoint = other.endpoint;
     hostId = other.hostId;
+    engine = other.engine;
+    serverVersion = other.serverVersion;
     version = other.version;
     return *this;
   }
@@ -121,6 +132,8 @@ struct HealthRecord {
     obj.add("Host", VPackValue(hostId));
     obj.add("SyncStatus", VPackValue(syncStatus));
     obj.add("Status", VPackValue(status));
+    obj.add("Version", VPackValue(serverVersion));
+    obj.add("Engine", VPackValue(engine));
     if (syncTime.empty()) {
       obj.add("Timestamp",
               VPackValue(timepointToString(std::chrono::system_clock::now())));
@@ -414,6 +427,8 @@ std::vector<check_t> Supervision::check(std::string const& type) {
     }
   }
 
+  //LOG_TOPIC(ERR, Logger::FIXME) << "ServersRegistered: " << serversRegistered;
+
   // Remove all machines, which are no longer planned
   for (auto const& machine : machinesPlanned) {
     todelete.erase(
@@ -429,6 +444,8 @@ std::vector<check_t> Supervision::check(std::string const& type) {
     std::string lastHeartbeatStatus, lastHeartbeatAcked, lastHeartbeatTime,
       lastStatus, serverID(machine.first), shortName;
 
+    //LOG_TOPIC(ERR, Logger::FIXME) << "ServerID: " << serverID;
+
     // short name arrives asynchronous to machine registering, make sure
     //  it has arrived before trying to use it
     auto tmp_shortName = _snapshot.hasAsString(targetShortID + serverID + "/ShortName");
@@ -436,21 +453,35 @@ std::vector<check_t> Supervision::check(std::string const& type) {
 
       shortName = tmp_shortName.first;
 
-      // Endpoint
+      // "/arango/Current/ServersRegistered/<server-id>/endpoint"
       std::string endpoint;
       std::string epPath = serverID + "/endpoint";
       if (serversRegistered.has(epPath)) {
         endpoint = serversRegistered.hasAsString(epPath).first;
       }
+      // "/arango/Current/ServersRegistered/<server-id>/host"
       std::string hostId;
       std::string hoPath = serverID + "/host";
       if (serversRegistered.has(hoPath)) {
         hostId = serversRegistered.hasAsString(hoPath).first;
       }
+      // "/arango/Current/ServersRegistered/<server-id>/serverVersion"
+      std::string serverVersion;
+      std::string svPath = serverID + "/versionString";
+      if (serversRegistered.has(svPath)) {
+        serverVersion = serversRegistered.hasAsString(svPath).first;
+      }
+      // "/arango/Current/ServersRegistered/<server-id>/engine"
+      std::string engine;
+      std::string enPath = serverID + "/engine";
+      if (serversRegistered.has(enPath)) {
+        engine = serversRegistered.hasAsString(enPath).first;
+      }
+
 
       // Health records from persistence, from transience and a new one
-      HealthRecord transist(shortName, endpoint, hostId);
-      HealthRecord persist(shortName, endpoint, hostId);
+      HealthRecord transist(shortName, endpoint, hostId, engine, serverVersion);
+      HealthRecord persist(shortName, endpoint, hostId, engine, serverVersion);
 
       // Get last health entries from transient and persistent key value stores
       if (_transient.has(healthPrefix + serverID)) {
@@ -491,6 +522,9 @@ std::vector<check_t> Supervision::check(std::string const& type) {
 
       // Status changed?
       bool changed = transist.statusDiff(persist);
+
+      /*LOG_TOPIC(ERR, Logger::FIXME) << "Changed: " << changed
+        << "transist: " << transist << " persist: " << persist;*/
 
       // Take necessary actions if any
       std::shared_ptr<VPackBuilder> envelope;
@@ -950,7 +984,7 @@ void Supervision::workJobs() {
 
 void Supervision::readyOrphanedIndexCreations() {
   _lock.assertLockedByCurrentThread();
-  
+
   if (_snapshot.has(planColPrefix) && _snapshot.has(curColPrefix)) {
     auto const& plannedDBs = _snapshot(planColPrefix).children();
     auto const& currentDBs = _snapshot(curColPrefix);
@@ -982,7 +1016,7 @@ void Supervision::readyOrphanedIndexCreations() {
                   for (auto const& sh : shards.children()) {
 
                     auto const& shname = sh.first;
-                  
+
                     if (currentDBs.has(colPath + shname + "/indexes")) {
                       auto const& curIndexes =
                         currentDBs(colPath + shname + "/indexes").slice();
@@ -1036,7 +1070,7 @@ void Supervision::readyOrphanedIndexCreations() {
               { VPackObjectBuilder precondition(envelope.get());
                 envelope->add(
                   VPackValue(
-                    _agencyPrefix + planColPrefix + colPath + "indexes")); 
+                    _agencyPrefix + planColPrefix + colPath + "indexes"));
                 envelope->add(indexes); }
             }}
 
@@ -1045,7 +1079,7 @@ void Supervision::readyOrphanedIndexCreations() {
             LOG_TOPIC(DEBUG, Logger::SUPERVISION)
               << "failed to report ready index to agency. Will retry.";
           }
-        }          
+        }
       }
     }
   }
