@@ -1,6 +1,8 @@
 v3.3.20 (XXXX-XX-XX)
 --------------------
 
+* Export Version and Storage Engine in Cluster Health.
+
 * Potential fix for issue #7407: arangorestore very slow converting from mmfiles to rocksdb
 
 * Updated joi library (Web UI), improved foxx mount path validation
